--- a/dockerfile/frontend/nginx.conf
+++ b/dockerfile/frontend/nginx.conf
@@ -61,7 +61,7 @@ server{
   }
 
   location /api/ {
-    proxy_pass http://backend:8080/api/;
+    proxy_pass http://backend-svc:5000/api/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
