--- a/dockerfile/docker-compose/docker-compose.yml
+++ b/dockerfile/docker-compose/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - 80:80
 
-  backend:
+  backend-svc:
     image: kylinhuang/hello_world_backend:latest
     container_name: backend
     ports:
-      - 8080:8080
+      - 5000:5000
