--- a/k8s_yaml/backend_deployment.yml
+++ b/k8s_yaml/backend_deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: backend-deployment
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       name: backend
@@ -26,8 +26,8 @@ spec:
         image: kylinhuang/hello_world_backend:latest
         imagePullPolicy: "Always"
         ports:
-        - containerPort: 80
-          name: tw-http        
+        - containerPort: 5000
+          name: backend-port       
         resources:
           requests:
             cpu: 125m
