--- a/jenkinsfile/deploy_frontend/Jenkinsfile
+++ b/jenkinsfile/deploy_frontend/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     }
     parameters {
         //string for image version control
-        string(name: 'TAG',defaultValue: '0.0.0', description: 'use this parameter to control the version of frontend image')
+        string(name: 'TAG',defaultValue: 'latest', description: 'use this parameter to control the version of frontend image')
     }
 
     stages {
